<resources>
    <string name="app_name">Found A Pet</string>
    <string name="logo">Logo de la aplicación</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Menú Principal</string>
    <string name="title_activity_pets_map">Map</string>
    <string name="title_activity_new_pet">Nueva mascota</string>
    <string name="title_activity_pet_description">Datos de la mascota</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="title_activity_comments">Comentarios</string>

    <string name="loading">Cargando</string>
    <string name="exit">Pulse VOLVER de nuevo para salir</string>

    <!-- Pantalla de Login -->
    <string name="user">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="login">Acceder</string>
    <string name="new_user">Nuevo Usuario</string>
    <string name="remember_credentials">Recordar usuario y contraseña</string>
    <string name="credentials_needed">Debe introudcir el usuario y la contraseña</string>
    <string name="connect_title">Acceso</string>
    <string name="connect_message">Comprobando credenciales</string>
    <string name="wrong_user">No existe el usuario</string>
    <string name="guest_login">Entrar como invitado</string>

    <!-- Pantalla de Registro -->
    <string name="registration">Registro de Usuario</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="user_name">Usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="new_password">Contraseña</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="register">Darse de alta</string>
    <string name="all_fields_required">Debe introducir todos los datos solicitados</string>
    <string name="short_pass">La contraseña debe tener al menos 6 dígitos</string>
    <string name="pass_dont_match">Las contraseñas no coinciden</string>
    <string name="not_valid_email">La dirección de email introducida no es válida</string>
    <string name="user_created">Se ha creado el usuario</string>
    <string name="user_exists">El usuario indicado ya existe</string>
    <string name="user_creation_error">Se ha producido un error de comunicación con el servidor</string>
    <string name="no_space_in_login">El usuario no puede contener espacios</string>
    <string name="no_space_in_pass">La contraseña no puede contener espacios</string>

    <!-- Menú principal -->
    <string name="loading_pets">Recuperando mascotas</string>
    <string name="patrol_mode_check">Modo Patrulla</string>
    <string name="locating">Localizando</string>
    <string name="locating_text">Se está obteniendo tu localización</string>
    <string name="feedback">Informar de un error</string>
    <string name="email_address" translatable="false">foundapetapp@gmail.com</string>
    <string name="email_subject">Informe de la aplicación</string>
    <string name="no_guest_allowed">Debes iniciar sesión para poder dar de alta animales</string>
    <string name="accept">Aceptar</string>


    <!-- Pantalla de Mapa -->
    <string name="more_info">Más información…</string>
    <string name="found">ENCONTRADO</string>
    <string name="lost">PERDIDO</string>


    <!-- Pantalla de nueva mascota -->
    <string name="race">Raza del animal</string>
    <string name="description">Comentarios a añadir</string>
    <string name="send">Enviar</string>
    <string name="location">Localización</string>
    <string name="pet_created">Alta realizada correctamente</string>
    <string name="spinner_not_valid">Selecciona una especie animal</string>
    <string name="creating_pet">Se están enviando los datos de la mascota</string>
    <string name="no_location">Debe seleccionar la posición. Para ello, mantenga pulsado el mapa hasta que aparezca el marcador</string>
    <string name="no_pic">Debe incluir una fotografía para que sea fácil identificarlo</string>
    <string name="no_type">Debe seleccionar el tipo de mascota</string>
    <string name="no_race">Debe indicar la raza del animal</string>
    <string name="no_desc">Debe introducir una descripción</string>
    <string name="lost_found">Perdido █ Encontrado</string>

    <!-- Pantalla de datos del animal -->
    <string name="type">Tipo</string>
    <string name="pet_race">Raza</string>
    <string name="pet_desc">Descripción</string>
    <string name="image_loading">Cargando imagen…</string>
    <string name="image">Fotografía</string>
    <string name="pet_rescued">¡Rescatado!</string>
    <string name="rescue_warning">Vas a dar el caso por cerrado y ya no aparecerá más en la aplicación. ¿Deseas continuar?</string>

    <!-- Pantalla de ajustes -->
    <string name="map_type">Tipo de mapa</string>
    <string name="no_gps">No utilizar señal GPS</string>
    <string name="delete_user">Eliminar usuario</string>
    <string name="attention">Atención</string>
    <string name="delete_confirmation">Se va a eliminar tu usuario y no podrás volver a entrar en la aplicación. ¿Quieres continuar?</string>
    <string name="yes">Continuar</string>
    <string name="no">Cancelar</string>
    <string name="deleteing_user">Eliminando usuario</string>
    <string name="show_all_pets">Mostrar todos los animales</string>

    <!-- Pantalla de comentarios -->
    <string name="new_comment">Comentar</string>
    <string name="connect_comment">Enviando</string>
    <string name="connect_comment_message">Se está enviando el comentario</string>
    <string name="comment_required">Debe introducir un comentario</string>
    <string name="insert_comment">Comentario…</string>
    <string name="no_comments_title">Aun no se han introducido comentarios</string>
    <string name="no_comments">Sé el primero en comentar este caso, pero siempre que lo que escribas pueda ayudar al animalito :)</string>

</resources>
