<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jvilam.foundapet.LoginActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:id="@+id/textView"
        android:layout_marginTop="31dp"
        android:textColor="@color/textColor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextUser"
        android:inputType="text"
        android:textColor="@color/textColor"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView2"
        android:textColor="@color/textColor"
        android:layout_below="@+id/editTextUser"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:textColor="@color/textColor"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/buttonLogin"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignRight="@+id/editTextPassword"
        android:layout_alignEnd="@+id/editTextPassword"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:id="@+id/buttonNewUser"
        android:layout_below="@+id/buttonLogin"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignStart="@+id/buttonLogin"
        android:layout_alignRight="@+id/buttonLogin"
        android:layout_alignEnd="@+id/buttonLogin" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_credentials"
        android:id="@+id/checkBoxRemeberLogin"
        android:textColor="@color/textColor"
        android:layout_below="@+id/buttonNewUser"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/photo"
        android:layout_below="@+id/checkBoxRemeberLogin"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo" />
</RelativeLayout>
