<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.jvilam.foundapet.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_type"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColor"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:id="@+id/spinnermapType"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_gps"
        android:id="@+id/checkBoxNoGps"
        android:layout_below="@+id/spinnermapType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColor"
        android:layout_alignRight="@+id/spinnermapType"
        android:layout_alignEnd="@+id/spinnermapType" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:id="@+id/buttonDeleteUser"
        android:background="@color/warning"
        android:textColor="@color/textColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_all_pets"
        android:id="@+id/checkBoxShowAllPets"
        android:layout_below="@+id/checkBoxNoGps"
        android:layout_alignParentLeft="true"
        android:textColor="@color/textColor"
        android:layout_alignParentStart="true" />
</RelativeLayout>
