<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jvilam.foundapet.views.NewPetActivity"
    android:background="@color/background">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerType"
        android:layout_alignParentTop="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:hint="@string/race"
        android:layout_height="wrap_content"
        android:id="@+id/editTextRace"
        android:inputType="text"
        android:layout_below="@+id/spinnerType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/spinnerType"
        android:layout_alignStart="@+id/spinnerType"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLines ="4"
        android:ems="10"
        android:hint="@string/description"
        android:id="@+id/editTextComments"
        android:layout_below="@+id/editTextRace"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextRace"
        android:layout_alignEnd="@+id/editTextRace"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintColor" />

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/fragmentPetLocation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editTextComments"
        android:layout_alignEnd="@+id/editTextComments"
        android:layout_above="@+id/buttonSave"
        android:layout_below="@+id/textView10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/buttonSave"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/fragmentPetLocation"
        android:layout_alignEnd="@+id/fragmentPetLocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/textView10"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/editTextComments"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView10"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonPicture"
                android:src="@drawable/album_small_white"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/background"/>

            <ImageView
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:id="@+id/imageViewPreview"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </TableRow>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost_found"
        android:id="@+id/switchFoundPet"
        android:layout_alignBottom="@+id/buttonSave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/textColor"/>

</RelativeLayout>
